<resources>
    <string name="app_name">New-Yorker.dk</string>
    <string name="activityNameProductCatalog">Produktkatalog</string>
    <string name="activityNameProductContact">Kontakt New-Yorker</string>

    <string name="button">Button</string>
    <string name="buttomNavigationIconLabelHome">Home</string>
    <string name="buttomNavigationIconLabelCatalog">Catalog</string>
    <string name="buttomNavigationIconLabelContact">Contact</string>

    <string name="contentLogo">Logo New-Yorker</string>
    <string name="contentBackgroundImg">Background image</string>
    <string name="productCatalogButton">Produktkatalog</string>
    <string name="contactButton">Kontakt New-Yorker</string>

    <string name="category1">Enkeltfag</string>
    <string name="category2">Døre</string>
    <string name="category3">Fag med døre</string>
    <string name="category4">Afskærmning på hjul</string>
    <string name="category5">Katelog item</string>

    <string name="productCatalogTitle">Produktkatalog</string>
    <string name="productCatalogText">Klik på illustrationerne for at se de specifikke detaljer og mål.</string>

    <string name="backButton">Tilbage</string>
    <string name="qrTitle">ENKELTE FAG 1 fag M/ 4 glas</string>
    <string name="qrText">Vælg målene fra dropdown, findes de ønskede mål ikke i valgmulighederne, kontakt os da venligst på tlf. 12345678. </string>
    <string name="sentQRButton">Send tilbudsforespørgsel</string>
    <string name="qrDescriptionLabel">Vejledende mål</string>
    <string name="qrWidthLabel">Bredde: 40-60cm</string>
    <string name="qrHeightLabel">Højde: 180-240cm</string>

    <string-array name="width_spinner">
        <item>40cm</item>
        <item>50cm</item>
        <item>60cm</item>
    </string-array>

    <string-array name="height_spinner">
        <item>180cm</item>
        <item>190cm</item>
        <item>200cm</item>
        <item>210cm</item>
        <item>220cm</item>
        <item>230cm</item>
        <item>240cm</item>
    </string-array>

</resources>