<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        tools:context="com.example.view.QuotationRequest">

    <!--toolbar include-->
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/backButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="changeActivityToProductCatalog"
        android:text="@string/backButton"
        android:fontFamily="sans-serif-black"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/qrImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="80dp"
                android:contentDescription="Product"
                android:src="@drawable/testimg" />

            <TextView
                android:id="@+id/qrTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:text="@string/qrTitle"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/qrText"
                android:layout_width="298dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="sans-serif-medium"
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp"
                android:text="@string/qrText"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/qrDescriptionLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="sans-serif-medium"
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp"
                android:text="@string/qrDescriptionLabel"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/qrWidthLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="sans-serif-medium"
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp"
                android:text="@string/qrWidthLabel"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/width_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp" />

            <TextView
                android:id="@+id/qrHeightLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="sans-serif-medium"
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp"
                android:text="@string/qrHeightLabel"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <Button
                android:id="@+id/sentQRButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="270dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="50dp"
                android:background="@color/gold"
                android:insetLeft="17dp"
                android:insetRight="17dp"
                android:text="@string/sentQRButton"
                android:textColor="@color/white" />

        </LinearLayout>



    </ScrollView>

</LinearLayout>