<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/homebackgroundimg"
    android:orientation="vertical"
    tools:context="com.example.view.MainActivity">

    <RelativeLayout
        android:id="@+id/layoutTop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/black">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:baselineAligned="false"
            android:contentDescription="@string/contentLogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/logo"
            tools:srcCompat="@drawable/logo" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="583dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/productCatalogButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="220dp"
            android:layout_marginRight="100dp"
            android:background="@color/gold"
            android:insetLeft="17dp"
            android:insetRight="17dp"
            android:onClick="changeActivityToProductCatalog"
            android:text="@string/productCatalogButton"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/contactButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="100dp"
            android:background="@color/gold"
            android:text="@string/contactButton"
            android:textAlignment="center"
            android:textColor="@color/white" />
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="5dp"
        android:background="@color/black"
        app:itemIconTint="@color/icons_color"
        app:itemRippleColor="@color/white"
        app:itemTextColor="@color/icons_color"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/bottom_navigation_menu"
        tools:layout_editor_absoluteX="-2dp" />

</LinearLayout>